(lang dune 3.11)

(name aoc)

(generate_opam_files true)

(source
 (github rhellwege/aoc-2023))

(authors "Ryan Hellwege")

(maintainers "Ryan Hellwege")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
